[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml-feature-store"
version = "0.1.0"
description = "Real-Time ML Feature Store for Fraud Detection"
authors = [{name = "Ali Raza", email = "your@email.com"}]
requires-python = ">=3.10"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
